# guardianeye

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEMO.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
scripts/: build_web_events.mjs  fetch_demo.sh  make_deck.js  make_edge_demo.py  make_promo_v2.py  make_showcase.py  render_promo_narration.sh
src/crushguard/: __init__.py  cli.py  depth.py  detection.py  pipeline.py  render.py  report.py
src/guardianeye/: __init__.py  cli.py  crowd.py  density.py  depth.py  detection.py  edge.py  fall.py  pipeline.py  render.py  report.py  risk.py
tests/: test_density.py  test_detection.py  test_edge.py  test_fall.py  test_report.py  test_risk.py  test_tiling.py
video_assets/: ATTRIBUTION.md
web/: README.md  pnpm-lock.yaml
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/briefing/: route.ts
web/app/api/chat/: route.ts
web/components/: Dashboard.tsx
web/lib/: analysis.ts  events.json  lyzr.ts
