[project]
name = "crushguard"
version = "0.1.0"
description = "Real-time crowd-crush early-warning system: YOLO person detection + monocular depth for live people-per-square-meter risk maps from aerial/elevated video"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ultralytics>=8.3",
    "transformers>=4.45",
    "torch>=2.4",
    "opencv-python>=4.10",
    "numpy>=1.26",
    "lap>=0.5.12",
]

[project.scripts]
crushguard = "crushguard.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crushguard"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
