[project]
name = "guardianeye"
version = "0.1.0"
description = "GuardianEye: AI safety officer for stadiums - YOLO pose + depth for collapse detection, 3D incident localization, and crowd-crush early warning from venue video"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ultralytics>=8.3",
    "transformers>=4.45",
    "torch>=2.4",
    "opencv-python>=4.10",
    "numpy>=1.26",
    "lap>=0.5.12",
]

[project.scripts]
guardianeye = "guardianeye.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/guardianeye"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
